# categories

./: .gitignore  Cargo.toml  LICENSE  README.md  categories.js  categories_bg.wasm  index.html
.github/workflows/: pages.yaml  test.yaml
crates/category/: Cargo.toml
crates/category/examples/: simple.rs
crates/category/src/: action.rs  bindings.rs  builder.rs  category.rs  equalities.rs  label.rs  lib.rs  morphism.rs  object.rs  tag.rs
crates/category/tests/: bug.rs  find.rs  product.rs  substitution.rs  substitution_bug.rs
crates/force_graph/: Cargo.toml
crates/force_graph/src/: graph_types.rs  lib.rs  types.rs  update.rs
crates/game/: Cargo.toml
crates/game/src/: main.rs
crates/graphs/: Cargo.toml
crates/graphs/src/: edge.rs  graph.rs  lib.rs  vertex.rs
src/: assets.rs  main.rs  util.rs
src/game_state/: action.rs  apply_rule.rs  category_builder.rs  chain.rs  constants.rs  drag.rs  focus.rs  goal.rs  graph_builder.rs  graph_link.rs  graph_types.rs  graph_util.rs  handle_event.rs  label.rs  mod.rs  renderable.rs  rule.rs  selection.rs  state.rs  update.rs  util.rs
src/game_state/curve/: mod.rs  parabola.rs
src/game_state/draw/: category.rs  chain.rs  dashed.rs  graph.rs  mod.rs  rule.rs  segment.rs
src/game_state/init/: category.rs  graph.rs  mod.rs  rules.rs
src/game_state/renderable/: camera.rs  cat.rs  mod.rs  rule.rs
src/game_state/rules/: bindings.rs  constraint.rs  construction.rs  mod.rs  object.rs  process.rs  render.rs  rule.rs  rule_builder.rs  selection.rs  tag.rs
src/game_state/selection/: geom.rs  mod.rs  select.rs
(+39 files in other folders)
