[package]
name = "categories"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/Nertsal/categories"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["crates/*"]

[dependencies]
category = { path = "crates/category" }
force_graph = { path = "crates/force_graph" }
geng = { version = "0.8.0", git = "https://github.com/kuviman/geng" }